--- a/第四章：教育社会学的历史与发展.md
+++ b/第四章：教育社会学的历史与发展.md
@@ -1,11 +1,11 @@
 # 第四章：教育社会学的历史与发展
 ## 引言
-* 沃德提出了“教育社会学”这一概念，范格曾将德国的教育社会学起源与创立归因于裴斯泰洛齐、舒来马赫和施丹等人的工作。
+* **沃德**提出了“教育社会学”这一概念，范格曾将德国的教育社会学起源与创立归因于裴斯泰洛齐、舒来马赫和施丹等人的工作。
 * 一般认为，作为系统和专门的教育社会学研究出现在**19世纪末20世纪初**。其中分为了两种解释：
   * 社会学学科体系的建立，研究领域扩大，开始研究教育学；
   * 教育学家对**赫尔巴特教育学**的批判，形成了社会本体论的、极具社会学精神的“教育科学”学派，强调教育的社会性。
 ## 一、教育社会学知识体系初期形成的两条途径
 ### 第一条途径
 第一条途径源于19世纪末20世纪初，工业化发展引起了社会的巨大变迁，教育不能够有效解决问题甚至称为问题的根源之一，开始对**赫巴特个人主义教育学**进行反思批判，设法构建出能够适应社会变迁的教育学体系。其中有**两个重要学派**参与了教育与社会关系的考察：
-* 思辨教育学派：以德国的**纳托尔普与伯格曼**提出的**“社会的教育学”**为代表
+* 思辨教育学派：以德国的**纳托尔普与伯格曼**提出的**/“社会的教育学”/**为代表
   * 内容：批判赫尔巴特教育学与社会的脱离，认为教育是社会的一个有机组成部分，强调教育与社会的关联性与相互作用
