--- a/第四章：教育社会学的历史与发展.md
+++ b/第四章：教育社会学的历史与发展.md
@@ -7,5 +7,7 @@
 ## 一、教育社会学知识体系初期形成的两条途径
 ### 第一条途径
 第一条途径源于19世纪末20世纪初，工业化发展引起了社会的巨大变迁，教育不能够有效解决问题甚至称为问题的根源之一，开始对**赫巴特个人主义教育学**进行反思批判，设法构建出能够适应社会变迁的教育学体系。其中有**两个重要学派**参与了教育与社会关系的考察：
-* 思辨教育学派：以德国的**纳托尔普与伯格曼**提出的**/“社会的教育学”/**为代表
-  * 内容：批判赫尔巴特教育学与社会的脱离，认为教育是社会的一个有机组成部分，强调教育与社会的关联性与相互作用
+* 思辨教育学派：以德国的**纳托尔普与伯格曼**提出的**社会的教育学**为代表。
+  * 内容：批判赫尔巴特教育学与社会的脱离，认为教育是社会的一个有机组成部分，强调教育与社会的关联性与相互作用。
+  * 与社会教育学相似的是德国的**狄尔泰、史普朗格、诺尔**等人提出的**文化教育学理论**
+   * 内容：认为赫尔巴特教育学方法是从类似于自然科学的心理学中推导出来的，不适用于个别的文化。教育是人类的一种文化传递活动，而不仅仅是人的心理活动。
