--- a/第四章：教育社会学的历史与发展.md
+++ b/第四章：教育社会学的历史与发展.md
@@ -9,5 +9,20 @@
 第一条途径源于19世纪末20世纪初，工业化发展引起了社会的巨大变迁，教育不能够有效解决问题甚至称为问题的根源之一，开始对**赫巴特个人主义教育学**进行反思批判，设法构建出能够适应社会变迁的教育学体系。其中有**两个重要学派**参与了教育与社会关系的考察：
 * 思辨教育学派：以德国的**纳托尔普与伯格曼**提出的**社会的教育学**为代表。
   * 内容：批判赫尔巴特教育学与社会的脱离，认为教育是社会的一个有机组成部分，强调教育与社会的关联性与相互作用。
-  * 与社会教育学相似的是德国的**狄尔泰、史普朗格、诺尔**等人提出的**文化教育学理论**
-   * 内容：认为赫尔巴特教育学方法是从类似于自然科学的心理学中推导出来的，不适用于个别的文化。教育是人类的一种文化传递活动，而不仅仅是人的心理活动。
+  * 与社会教育学相似的是德国的**狄尔泰、史普朗格、诺尔**等人提出的**文化教育学理论**，内容：认为赫尔巴特教育学方法是从类似于自然科学的心理学中推导出来的，不适用于个别的文化。教育是人类的一种文化传递活动，而不仅仅是人的心理活动。
+  * 美国的实用主义教育家**杜威**在《学校于社会》一书中呼应了思辨教育学派，从社会文化的观点考察教育的本质，并进行推理和论证。
+* 实证教育学派：以德国的**克里克与罗荷纳**为代表。
+ * 内容：认为赫尔巴特教育学之注意到教育过程中的细小成分，忽略了与人格形成相关的更广泛、更重要的过程，忽略了教育的社会结构特点和教育的社会功能。
+ * 方法：采用实证主义社会学的方法，进行实际的调查研究，用科学的方法探讨教育与社会的关系。
+ * 目的：建立一种新型的兼具实证性与科学性的教育理论。
+### 第二条途径
+第二条途径把学校看作一种社会制度，肯定教育的社会功能，用社会学的理论和方法阐释教育现象。
+* **孔德**：创建一种自然主义的社会科学，用自然界的科学方法来研究人类社会。
+ * 内容：**社会动力学和社会静力学**，即对于社会进步和社会秩序、社会变化和社会稳定的探讨；**社会进化的三阶段法则**；教育体系是联系和组成社会的功能机构，教育的任务乃是协调社会，学校的普及乃是稳定社会的基础。
+* **沃德**：1883年在**《动态社会学》**中专门讨论教育与社会进步的关系，提出“社会导进”，并正式提出了“教育社会学”的概念。但没有将教育社会学从一般的社会学中分离出来，没有认同他是教育社会学学科的重要创始人。
+* **涂尔干**：被认为是教育社会学的重要创始人。
+ * 内容：形成了比较系统的教育社会学思想和方法，首次将教育社会学纳入教育科学名下，明确了该学科的学科性质和研究内容。
+ * 教育界定为年长的几代人对社会生活方面尚未成熟的几代人所施加的影响。
+ * 纵向分析法国教育思想史，功能主义思想。
+### 教育社会学的分野
+欧洲教育社会学者侧重于教育于社会进步的关系的研究，强调教育社会学的社会学性格；美国偏重于社会秩序和解决社会问题的研究，看中教育社会学的实际效用。
