--- a/第四章：教育社会学的历史与发展.md
+++ b/第四章：教育社会学的历史与发展.md
@@ -25,4 +25,6 @@
  * 教育界定为年长的几代人对社会生活方面尚未成熟的几代人所施加的影响。
  * 纵向分析法国教育思想史，功能主义思想。
 ### 教育社会学的分野
-欧洲教育社会学者侧重于教育于社会进步的关系的研究，强调教育社会学的社会学性格；美国偏重于社会秩序和解决社会问题的研究，看中教育社会学的实际效用。
+欧洲教育社会学者侧重于教育于社会进步的关系的研究，强调教育社会学的**社会学性格**；美国偏重于社会秩序和解决社会问题的研究，看中教育社会学的**实际效用**。
+
+由于美国教育学家的应用价值的兴趣，教育社会学率先在美国大学建立并发展起来。
